RESOLVED FIXED 59304
Crash when adding a text node to a shadow root
https://bugs.webkit.org/show_bug.cgi?id=59304
Summary Crash when adding a text node to a shadow root
Dominic Cooney
Reported 2011-04-24 12:15:50 PDT
Adding a text node to a shadow root crashes; it should instead present the text in the shadow DOM.
Attachments
Patch (5.42 KB, patch)
2011-04-24 12:32 PDT, Dominic Cooney
no flags
Patch (5.17 KB, patch)
2011-04-24 13:44 PDT, Dominic Cooney
no flags
Patch (5.03 KB, patch)
2011-04-24 13:55 PDT, Dominic Cooney
no flags
Dominic Cooney
Comment 1 2011-04-24 12:32:44 PDT
WebKit Review Bot
Comment 2 2011-04-24 12:53:02 PDT
Attachment 90885 [details] did not pass chromium-ews: Output: http://queues.webkit.org/results/8507105 Unexpected failures: fast/dom/shadow/gc-shadow.html fast/dom/shadow/append-child-text.html
Dominic Cooney
Comment 3 2011-04-24 13:07:28 PDT
I’m setting up a Linux build environment to investigate the cr-linux EWS failures. I don’t know why fast/dom/shadow/append-child-text.html is an unexpected failure… the linked log output indicates that it passed :/
Dominic Cooney
Comment 4 2011-04-24 13:08:08 PDT
s/append-child-text/gc-shadow/
Adam Barth
Comment 5 2011-04-24 13:20:41 PDT
(In reply to comment #4) > s/append-child-text/gc-shadow/ Hum... Interesting. Running tests on the EWS is still very experimental. I wouldn't be surprised of there were some bugs.
Dimitri Glazkov (Google)
Comment 6 2011-04-24 13:24:05 PDT
(In reply to comment #3) > I’m setting up a Linux build environment to investigate the cr-linux EWS failures. I don’t know why fast/dom/shadow/append-child-text.html is an unexpected failure… the linked log output indicates that it passed :/ I don't think you need a Linux env to test this. There's nothing Linuxey about this code.
Dimitri Glazkov (Google)
Comment 7 2011-04-24 13:30:53 PDT
Comment on attachment 90885 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90885&action=review > LayoutTests/fast/dom/shadow/append-child-text-expected.txt:13 > + text run at (0,0) width 39: "PASS" Can this test be dumpAsText?
Dominic Cooney
Comment 8 2011-04-24 13:32:26 PDT
Comment on attachment 90885 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90885&action=review >> LayoutTests/fast/dom/shadow/append-child-text-expected.txt:13 >> + text run at (0,0) width 39: "PASS" > > Can this test be dumpAsText? No, because shadow DOM is not dumped as text. That it doesn’t crash is observable, but that the text appears is not observable with a text result. WDYT?
Dominic Cooney
Comment 9 2011-04-24 13:33:35 PDT
cr-linux’s complaint is probably the lack of pixel test results.
Dimitri Glazkov (Google)
Comment 10 2011-04-24 13:34:43 PDT
(In reply to comment #9) > cr-linux’s complaint is probably the lack of pixel test results. Yes, and it will need its own expectations due to text metric differences. Let's make this a dumpAsText. Perhaps event file a bug to teach the dumper about shadow DOM.
Dominic Cooney
Comment 11 2011-04-24 13:44:31 PDT
Dimitri Glazkov (Google)
Comment 12 2011-04-24 13:45:49 PDT
Comment on attachment 90886 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90886&action=review the only nit remaining: > LayoutTests/fast/dom/shadow/append-child-text.html:4 > +<script src="../../js/resources/js-test-pre.js"></script> don't really need the harness for this test.
Dominic Cooney
Comment 13 2011-04-24 13:55:51 PDT
Dominic Cooney
Comment 14 2011-04-24 14:00:43 PDT
For the fossil record: filed bug 59305 for adding text in shadow DOM to layout test text output.
WebKit Review Bot
Comment 15 2011-04-24 14:15:10 PDT
Attachment 90887 [details] did not pass chromium-ews: Output: http://queues.webkit.org/results/8504488 Unexpected failures: fast/dom/shadow/gc-shadow.html
WebKit Commit Bot
Comment 16 2011-04-24 14:20:53 PDT
Comment on attachment 90887 [details] Patch Clearing flags on attachment: 90887 Committed r84759: <http://trac.webkit.org/changeset/84759>
WebKit Commit Bot
Comment 17 2011-04-24 14:20:58 PDT
All reviewed patches have been landed. Closing bug.
Dimitri Glazkov (Google)
Comment 18 2011-04-24 16:02:28 PDT
(In reply to comment #2) > Attachment 90885 [details] did not pass chromium-ews: > Output: http://queues.webkit.org/results/8507105 > Unexpected failures: > fast/dom/shadow/gc-shadow.html > fast/dom/shadow/append-child-text.html EWS, you were right. gc-shadow is now crashing on canaries. Dominic, Adam, can you rollout on #webkit?
Note You need to log in before you can comment on or make changes to this bug.