2011-04-24  Dominic Cooney  <dominicc@chromium.org>

Reviewed by Dimitri Glazkov.

        Crash when adding a text node to a shadow root
        https://bugs.webkit.org/show_bug.cgi?id=59304

        * fast/dom/shadow/append-child-text-expected.txt: Added.
        * fast/dom/shadow/append-child-text.html: Added.
2011-04-24  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        Crash when adding a text node to a shadow root
        https://bugs.webkit.org/show_bug.cgi?id=59304

        Text nodes need to consult their host element for style.

        Test: fast/dom/shadow/append-child-text.html

        * dom/Node.cpp:
        (WebCore::NodeRendererFactory::styleForRenderer):
        (WebCore::NodeRendererFactory::createRendererAndStyle):
        (WebCore::Node::styleForRenderer): forward to NodeRendererFactory

Canonical link: https://commits.webkit.org/74488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84759 268f45cc-cd09-0410-ab3c-d52691b4dbfc